# somerset-sale

./: .gitignore  README.md  pyproject.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
codex_sale_docs/: __init__.py  build.py  city_data_enums.py  city_data_fetch.py  city_data_inventory.py  city_data_metadata_rst.py  city_data_rst.py  get_city_data.py  open_calgary.py  osm_address_lookup.py  provenance.py  realtor_audit.py  realtor_single_listing.py  renter_comps.py  sale_config.py  unit_inference.py
data/: assumptions.yml  comps_clean.csv  comps_raw.csv  open_calgary_assessment_comps.csv  open_calgary_floorplan_groups.csv  open_calgary_inferred_unit_comps.csv  open_calgary_similar_floorplan_units.csv  open_calgary_somervale_all_properties.csv  open_calgary_somervale_all_units.csv  open_calgary_somervale_building_sub_property_use_counts.csv  open_calgary_somervale_building_summary.csv  open_calgary_somervale_condo_units.csv  open_calgary_somervale_floorplan_groups.csv  open_calgary_somervale_inventory_summary.json  open_calgary_somervale_other_properties.csv  open_calgary_somervale_parking_units.csv  open_calgary_somervale_raw_field_profile.csv  open_calgary_somervale_raw_rows.json  open_calgary_somervale_raw_rows_flat.csv  open_calgary_somervale_raw_rows_meta.json  open_calgary_somervale_sale_subject_profile.csv  open_calgary_somervale_sale_subject_profile.json  open_calgary_somervale_same_floorplan_units.csv  open_calgary_somervale_similar_floorplan_units.csv  open_calgary_somervale_storage_units.csv  open_calgary_somervale_unit_link_index.csv  open_calgary_street_all_units.csv  open_calgary_street_all_units_key_fields.csv  open_calgary_street_all_units_key_fields_with_subject.csv  open_calgary_street_all_units_same.csv  open_calgary_street_all_units_similar.csv  open_calgary_street_units_only_key_fields_with_subject.csv  renter_comps_stretch_table.csv  renter_comps_table.csv  source_registry.csv
evidence/open_calgary/4bsw-nn7w/: 20260225T074153Z_fetch.json  20260225T080053Z_fetch.json  20260225T085153Z_fetch.json
scripts/: fetch_open_calgary.py  google_maps_suggest_addresses.py  infer_open_calgary_units.py  osm_address_lookup.py  osm_geocode.py  prepare_renter_comps.py  realtor_accuracy_audit.py  realtor_browser_search.py  realtor_single_listing_extract.py  validate_provenance.sh
source/: 01_executive_summary.rst  02_property_profile.rst  03_comparables.rst  03b_renter_comps_generated.rst  03c_renter_comps_stretch_generated.rst  04_adjustments.rst  05_price_conclusion.rst  90_appendix_sources.rst  91_city_data_index.rst  92_city_data_enum_dictionary.rst  93_city_data_fetch_metadata.rst  conf.py  generate_workflow_diagram.py  index.rst  workflow_flow_control.yml
source/_generated/: workflow_overview_diagram.uml
source/_static/: custom.css
source/assessment_comps/: comparables.rst  index.rst
source/assessment_comps/estimate_floor_step_effects/: estimate_floor_step_effects.py  index.rst
source/assessment_comps/find_same_floor_value_peers/: find_same_floor_value_peers.py  index.rst  prepare_renter_comps.py  renter_comps_generated.rst  renter_comps_stretch_generated.rst
source/assessment_comps/fit_assessment_value_formula/: fit_assessment_value_formula.py  index.rst
source/assessment_comps/generalize_cross_building_matches/: generalize_cross_building_matches.py  index.rst  infer_open_calgary_units.py
source/assessment_comps/match_same_unit_across_buildings/: fetch_open_calgary.py  index.rst  match_same_unit_across_buildings.py
source/city/: index.rst
source/city/build_building_unit_inventory/: build_building_unit_inventory.py  city_data_enum_dictionary.rst  city_data_enums.py  city_data_fetch_metadata.rst  city_data_index.rst  city_data_metadata_rst.py  city_data_to_rst.py  index.rst
source/city/build_subject_unit_profile/: build_subject_unit_profile.py  city_data_inventory.py  index.rst  property_profile.rst
source/city/fetch_subject_street_assessments/: fetch_city_data.py  fetch_subject_street_assessments.py  get_city_data.py  index.rst
source/city_data/: building_1000_somervale_co_sw.rst  building_2000_somervale_co_sw.rst  building_3000_somervale_co_sw.rst  building_4000_somervale_co_sw.rst  building_5000_somervale_co_sw.rst  building_5500_somervale_co_sw.rst  building_6000_somervale_co_sw.rst
source/city_data/_tables/: non_residential_rows.csv
source/fair_market_value/: index.rst
source/fair_market_value/estimate_fmv_range_and_point/: estimate_fmv_range_and_point.py  index.rst
source/fair_market_value/fuse_assessment_and_mls_signals/: adjustments.rst  fuse_assessment_and_mls_signals.py  index.rst
source/fair_market_value/select_final_fmv/: index.rst  select_final_fmv.py
source/fair_market_value/write_fmv_justification/: appendix_sources.rst  check_provenance.py  executive_summary.rst  index.rst  renter_email.rst  renter_text.rst  terms_and_deadline.rst  write_fmv_justification.py
source/mls_enrichment/: index.rst
source/mls_enrichment/calibrate_feature_multipliers/: calibrate_feature_multipliers.py  index.rst
(+910 files in other folders)
