[project]
name = "codex-sale-docs"
version = "0.1.0"
description = "Sphinx/rST documentation workflow for a defensible condo pricing memo."
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [{ name = "Joseph Surmava", email = "joseph@surmava.com" }]
dependencies = [
    "sphinx>=8.2.3,<9.0.0",
    "sphinx-book-theme>=1.1.4,<2.0.0",
    "sphinx-autobuild>=2025.8.25,<2026.0.0",
    "sphinx-design>=0.6.1,<0.7.0",
    "sphinxcontrib-plantuml>=0.30,<1.0.0",
    "rst2pdf>=0.103.1,<0.104.0",
    "pyyaml>=6.0.2,<7.0.0",
    "playwright>=1.53.0,<2.0.0",
]

[tool.poetry]
packages = [
    { include = "city", from = "source" },
    { include = "assessment_comps", from = "source" },
    { include = "mls_enrichment", from = "source" },
    { include = "fair_market_value", from = "source" },
]
include = ["pyproject.py"]

[tool.poetry.scripts]
settings = "pyproject:settings"
generate-workflow-diagram = "pyproject:generate_workflow_diagram"
workspace-settings = "pyproject:workspace_settings"
build = "pyproject:build"
esbonio = "pyproject:esbonio"
auto = "pyproject:auto"
clean = "pyproject:clean"
check-provenance = "pyproject:check_provenance"
fetch-open-calgary = "pyproject:fetch_open_calgary"
prepare-renter-comps = "pyproject:prepare_renter_comps"
infer-open-calgary-units = "pyproject:infer_open_calgary_units"
fetch_city_data = "pyproject:fetch_city_data"
city_data_to_rst = "pyproject:city_data_to_rst"
get_city_data = "pyproject:get_city_data"
city_data_enums = "pyproject:city_data_enums"
city_data_inventory = "pyproject:city_data_inventory"
city_data_metadata_rst = "pyproject:city_data_metadata_rst"
audit-realtor-accuracy = "pyproject:audit_realtor_accuracy"
extract-realtor-listing = "pyproject:extract_realtor_listing"
osm-address-lookup = "pyproject:osm_address_lookup"
osm-geocode = "pyproject:osm_geocode"
osm-suggest-addresses = "pyproject:osm_suggest_addresses"
google-maps-geocode = "pyproject:google_maps_geocode"
google-maps-suggest-addresses = "pyproject:google_maps_suggest_addresses"
find-realtor-listings-browser = "pyproject:find_realtor_listings_browser"

[tool.sale]
subject_address = "3000 Somervale Court SW # 209, Calgary AB T2Y 4J2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
